# fuel-additive

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
ansible/: ansible.cfg
ansible/inventory/: inventory
ansible/kubespray/: ansible.cfg  demo.yml  fuel.yml
ansible/kubespray/playbooks/: bastion.yml  bootstrap_os.yml  check_local.yml  etcd_master.yml  etcd_node.yml  kubernetes_cluster.yml  preinstall_download.yml
ansible/steam/: ansible.cfg  demo.yml  site.yml  steam.yml
docker/centos/: Dockerfile  build.sh
docker/centos/config/: CentOS-Base.repo  Docker.repo  Epel.repo  Fuel.repo  packages
docker/deployer/: Dockerfile  build.sh
docker/deployer/config/: Epel.repo  grub.cfg  packages
docker/ubuntu/: Dockerfile
docs/: design.md  provision.yaml  usage.md
docs/ansible/: fuel_inventory.py  inventory.py
docs/fuel_metadata/: attributes.yml  bond.yml  components.json  components.yml  networks.yml  nic.yml  roles.json  roles.yml  tags.json  tags.yml  volumes.json  volumes.yml
etc/: fuel.sql  fuel_bootstrap_cli.yaml  node_provison.json  provison.json
etc/ansible/: kubespray.yaml  steam.yaml
etc/cloud_init_templates/: boothook_centos.jinja2  cloud_config_centos.jinja2
etc/fix_model/: fs.py
etc/fuel_metadata/: attributes.json  network_roles.json  networks.json
etc/graph/: debug.json  provision.yaml
etc/graph/default/: tasks.yaml
etc/kubernetes_metadata/: attributes.json  attributes.yml  components.json  components.yml  modes.yml  network_roles.yml  roles.json  roles.yml  tags.json  tags.yml  volumes.json  volumes.yml
etc/nexus/: certs.json  deb.json  docker.json  files.json  helm.json  pypi.json  yum.json
fuel_additive/: contants.py  errors.py
fuel_additive/ansible/: play.py  playbook.py
fuel_additive/api/: bootstrap.py
fuel_additive/cmd/: base.py  builder.py  init.py  init_os.py  init_release.py  inventory.py  provisioner.py  provisoner.py
fuel_additive/drivers/: nailgun.py
fuel_additive/init/: astute.py  base.py  cobbler.py  dire.py  docker.py  httpd.py  pypi.py  release.py
fuel_additive/objects/: repo.py
fuel_additive/os/: build.py  repo.py
fuel_additive/utils/: build.py  fuel_inventory.py  inventory.py  repo.py
(+19 files in other folders)
