[metadata]
name = fuel-additive
version = 1.0.0
author = sinovast
autho-email = shikd@sinovast.com
summary = Fuel Additive
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python

[files]
packages =
    fule_additive

data_files =
    /etc/fuel/additive/ = etc/cloud_init_templates/*
    /etc/fuel/additive/ = etc/fix_model/*

[entry_points]
console_scripts =

[pbr]
autodoc_index_modules = True