[metadata]
name = fuel-additive
version = 1.0.0
author = sinovast
autho-email = shikd@sinovast.com
summary = Fuel Additive
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python

[files]
packages =
    fuel_additive

data_files =
    /etc/fuel/additive/ = etc/cloud_init_templates/*
    /etc/fuel/additive/ = etc/fix_model/*
    /etc/fuel/additive/ = fuel_additive/cmd/provisioner.py
    /etc/fuel/additive/kubernetes_metadata = etc/kubernetes_metadata/*
    /etc/fuel/additive/graph = etc/graph/*
    /etc/fuel/additive/nexus = etc/nexus/*

    
[entry_points]
console_scripts =
    fuel_additive_build = fuel_additive.cmd.builder:build
    fuel_additive_init = fuel_additive.cmd.init:additive_init
    fuel_dire_init = fuel_additive.cmd.init:dire_init

fuel_agent.drivers =
    nailgun_build_centos_image = fuel_additive.drivers.nailgun:NailgunBuildCentOSImage

[pbr]
autodoc_index_modules = True
